<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/transparent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#00000000"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_400sdp"
            android:layout_alignParentTop="true"
            android:background="@color/white"
            android:layout_above="@+id/belowLayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/bg"
                android:id="@+id/image"
                android:layout_marginStart="@dimen/_minus5sdp"
                android:layout_marginEnd="@dimen/_minus5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>




                    <RelativeLayout
                        android:id="@+id/main_back"
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/white_corner_bg"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/back_press"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_back" />
                    </RelativeLayout>

            <RelativeLayout
                android:id="@+id/menu_more"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/white_corner_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/menu"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_more" />
            </RelativeLayout>


            <TextView
                android:id="@+id/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="@font/sfpro_d_bold"
                android:text="Details"
                android:layout_margin="@dimen/_20sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_back" />

            <TextView
                    android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:fontFamily="sans-serif-black"
                android:text="0000 AED"
                android:layout_gravity="bottom"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/belowLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_minus10sdp"
            android:background="@drawable/bottom_background">

            <ImageView
                android:id="@+id/collape_increase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_expand"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:id="@+id/share"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/white_corner_bg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/collape_increase">

                <ImageView
                    android:id="@+id/share_image"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_share" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:background="@drawable/button_background_login"
                android:fontFamily="@font/sfpro_d_bold"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/order_now"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/share"
                app:layout_constraintTop_toBottomOf="@+id/collape_increase" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="sans-serif-light"
                android:text="asdasdasda"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textColor="#08293B"
                android:ellipsize="end"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toTopOf="@+id/container_reviews"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/share" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:id="@+id/container_reviews"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/rating_bottom_bar"
                android:layout_marginBottom="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/review"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="#444B51"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="sans-serif"
                    android:text="@string/reviews"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/total_reviews"
                    android:textSize="@dimen/_18ssp"
                    android:textColor="#444B51"
                    android:layout_below="@+id/review"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="sans-serif"
                    android:letterSpacing=".05"
                    android:text="@string/abc"/>

                <RatingBar
                    android:id="@+id/rating"
                    style="@style/Widget.AppCompat.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:progressTint="#FFE072"
                    android:rating="4.3"
                    android:layout_toEndOf="@+id/review"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_below="@+id/review"
                    android:secondaryProgressTint="#D9D9D9"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>